--- a/08_projects/index.html
+++ b/08_projects/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width" />
 
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
   </head>
   <body style="background-color: #212121; color: #fff">
     <nav>
@@ -27,13 +26,13 @@
         <a class="project-link" href="project3/index.html"
           >Project Three - Digital clock 😎</a
         >
-        <a class="project-link" href="./4-GuessTheNumber/index.html"
+        <a class="project-link" href="project4/index.html"
           >Project Four - Guess the number 🤨</a
         >
-        <a class="project-link" href="./5-keyboard/index.html"
+        <a class="project-link" href="project5/index.html"
           >Project 5 - Keyboard check 👻</a
         >
-        <a class="project-link" href="./6-unlimitedColors/index.html"
+        <a class="project-link" href="project6/index.html"
           >Project 6 - Unlimited Colors 🧠</a
         >
       </div>
